<resources>
    <string name="AppName">ایرگرام</string>
    <string name="AppNameBeta">ایرگرام</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="ChitSettings">Persian Telegram Settings</string>
    <string name="id">Id</string>
    <string name="IdNotValid">Id is invalid</string>
    <string name="IdFinder">Id Finder</string>
    <string name="IdHelp">a–z 0–9 _\nMinimum length is 5 characters</string>
    <string name="Inviter">Inviter</string>
    <string name="Ghost">Ghost</string>
    <string name="ShowTab">Show tabs</string>
    <string name="ShowDot">Show dot for mutual contacts</string>
    <string name="ShowInviter">Show inviter in group settings</string>
    <string name="DefaultTab">Default Tab</string>
    <string name="DefaultFont">Default Font</string>
    <string name="GhostModeEnabled">Ghost mode enabled</string>
    <string name="HideTypingState">Hide typing state</string>
    <string name="Robots">Robots</string>
    <string name="Channels">Channels</string>
    <string name="Unreads">Unreads</string>
    <string name="All">All</string>
    <string name="Groups">Groups</string>
    <string name="DialogWallpaper">Dialogs background</string>
    <string name="StickerBigSize">Stickers gallery</string>
    <string name="ConfirmSticker">Confirm before sending sticker</string>
    <string name="StickerSuccessfullySaved">Sticker save successfully</string>
    <string name="CantSaveSticker">Can\'t save sticker</string>
    <string name="FileExists">File already exists</string>
    <string name="DeleteSavedStickers">Delete saved stickers</string>
    <string name="ContactUs">Contact us</string>
    <string name="SendEmail">Send email</string>
    <string name="DeleteStickerAlert">Are you sure you want to delete all stickers saved in gallery</string>
    <string name="HideStickers">Hide stickers from gallery</string>
    <string name="ShareMessage">Share Message</string>
    <string name="ShareMessageNoMessage">Share without quoting</string>
    <string name="Themes">Themes</string>
    <string name="Empty">Empty</string>
    <string name="UseThemeLed">Use theme LED color</string>
    <string name="NightMode">Night Mode</string>
    <string name="ActivateNightMode">Activate night mode</string>
    <string name="Until">Until</string>
    <string name="NightModeHelp">During night mode vibration and sound will be disabled for all of the notifications.</string>
    <string name="DeleteWallpaper">Delete background</string>
    <string name="SelectWallpaper">Change background</string>
    <string name="SendAsImage">Send as image</string>
    <string name="ChatInTelegramStyle">Chat in telegram design</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Phone verification</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.</string>
    <string name="SentAppCode">We\'ve sent the code to the <![CDATA[<b>]]>Telegram<![CDATA[</b>]]> app on your other device.</string>
    <string name="SentCallCode">We\'ve sent an activation call to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.\n\nDon\'t take it, Telegram will process everything automatically.</string>
    <string name="SentCallOnly">We are calling your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> to dictate a code.</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="SmsText">We will send you an SMS in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="settings_googleplay">ارسال نظر در کافه بازار</string>
    <string name="settings_email">ارسال ایمیل به توسعه دهنده</string>
    <string name="settings_googleplay_description">اگر که شما برای ارسال نظر به برنامه خودتون چند ثانیه وقت بگذارید ما بسیار زیاد خوشحال خواهیم شد</string>
    <string name="settings_googleplus">نمایش لیست برنامه ها</string>
    <string name="settings_googleplus_description">روی این گزینه کلیک کنید تا دیگر برنامه های ما را مشاهده فرمائید</string>
    <string name="about_description_1">توسعه داده شده توسط تیم نسترن</string>
    <string name="about_btn_1">ارسال نظر در بازار</string>
    <string name="about_btn_2">نمایش لیست برنامه ها در بازار</string>
    <string name="about_btn_3">ارسال ایمیل به توسعه دهنده</string>
    <string name="about_btn_4">کانال ما در تلگرام</string>
    <string name="about_description_2">طراحی رابط کاربری</string>
    <string name="app_description">پروژه ای خلاقانه و زیبا با کاربرد های فراوان</string>
    <string name="text">با عرض سلام و ادب
    \n
    این برنامه توسط گروه برنامه نویسی نسترن از روی سورس اصلی و رایگان تلگرام توسعه داده شده</string>
    <string name="exit_info">لطفا قبل از خروج از دیگر محصولات ما دیدن فرمائید</string>
    <string name="menue1">ارسال نظر</string>
    <string name="menue2">محصولات دیگر</string>
    <string name="font_num_1">پیش فرض</string>
    <string name="font_num_2">ایران سنس نازک</string>
    <string name="font_num_3">ایران سنس متوسط</string>
    <string name="font_num_4">میترا</string>
    <string name="font_num_5">ترافیک</string>
    <string name="font_num_6">یکان</string>
    <string name="font_num_7">هما</string>
    <string name="font_num_8">دست نویس</string>
    <string name="font_num_9">مروارید</string>
    <string name="font_num_10">افسانه</string>
    <string name="font_num_11">رویا</string>
    <string name="font_num_12">مایکروسافت ویندوز</string>
    <string name="copyright"></string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of Telegram, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates Telegram, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="SearchMessages">MESSAGES</string>
    <string name="Search">Search</string>
    <string name="MuteNotifications">Mute notifications</string>
    <string name="MuteFor">Mute for %1$s</string>
    <string name="UnmuteNotifications">Unmute</string>
    <string name="WillUnmuteIn">In %1$s</string>
    <string name="MuteDisable">Disable</string>
    <string name="Hashtags">HASHTAGS</string>
    <string name="Recent">RECENT</string>
    <string name="ChatHints">CHATS</string>
    <string name="ChatHintsDelete">Delete %1$s from suggestions?</string>
    <string name="LinkPreview">Link preview</string>
    <string name="Draft">Draft</string>
    <string name="HistoryCleared">History was cleared</string>
    <string name="GroupType">Group Type</string>
    <string name="ChannelType">Channel Type</string>
    <string name="ChannelTypePublic">Public</string>
    <string name="ChannelTypePrivate">Private</string>
    <string name="SetAsAdmin">Promote to admin</string>
    <string name="DescriptionInfoMega">You can provide an optional description for your group.</string>
    <string name="LeaveMega">Leave Group</string>
    <string name="DeleteMega">Delete Group</string>
    <string name="LeaveMegaMenu">Leave group</string>
    <string name="DeleteMegaMenu">Delete group</string>
    <string name="MegaDeleteInfo">You will lose all messages in this group.</string>
    <string name="MegaAdminsInfo">You can add administrators to help you manage your group. Tap and hold to remove them.</string>
    <string name="MegaDeleteAlert">Wait! Deleting this group will remove all members and all messages will be lost. Delete the group anyway?</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="MegaAddedBy">un1 added you to this group</string>
    <string name="MegaLeaveAlert">Are you sure you want to leave the group?</string>
    <string name="GroupUserCantAdd">Sorry, you can\'t add this user to groups.</string>
    <string name="GroupUserAddLimit">Sorry, this group is full.</string>
    <string name="GroupUserLeftError">Sorry, this user decided to leave this group, so you cannot invite them back here.</string>
    <string name="GroupUserCantAdmin">Sorry, too many administrators in this group.</string>
    <string name="GroupUserCantBot">Sorry, too many bots in this group.</string>
    <string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
    <string name="ActionPinnedNoText">un1 pinned a message</string>
    <string name="ActionPinnedPhoto">un1 pinned a photo</string>
    <string name="ActionPinnedVideo">un1 pinned a video</string>
    <string name="ActionPinnedFile">un1 pinned a file</string>
    <string name="ActionPinnedSticker">un1 pinned a sticker</string>
    <string name="ActionPinnedVoice">un1 pinned a voice message</string>
    <string name="ActionPinnedContact">un1 pinned a contact</string>
    <string name="ActionPinnedGeo">un1 pinned a map</string>
    <string name="ActionPinnedGif">un1 pinned a GIF</string>
    <string name="ActionPinnedMusic">un1 pinned a track</string>
    <string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
    <string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
    <string name="NoBlockedGroup">Blocked users are removed from the group and can only come back if invited by an admin. Invite links don\'t work for them.</string>
    <string name="NewChannel">New Channel</string>
    <string name="EnterChannelName">Channel name</string>
    <string name="Comments">Comments</string>
    <string name="LocalDocumentCache">Documents</string>
    <string name="LocalPhotoCache">Photos</string>
    <string name="LocalAudioCache">Voice messages</string>
    <string name="LocalVideoCache">Videos</string>
    <string name="Loading">Loading...</string>
</resources>